@@ -165,26 +165,9 @@ class CallerFinder extends AbstractCaller implements BacktraceConstInterface, Ca
         }
 
         $line--;
+        $commendLine = $this->pool->fileService->readFile($file, $line, $line);
 
-        // Now that we have the line where it was called, we must check if
-        // we have several commands in there.
-        $possibleCommands = explode(';', $this->pool->fileService->readFile($file, $line, $line));
-        // Now we must weed out the none krexx commands.
-        foreach ($possibleCommands as $key => $command) {
-            if (strpos(strtolower($command), $this->pattern) === false) {
-                unset($possibleCommands[$key]);
-            }
-        }
-
-        // I have no idea how to determine the actual call of krexx if we
-        // are dealing with several calls per line.
-        if (count($possibleCommands) === 1) {
-            // Now that we have our actual call, we must remove the krexx-part
-            // from it.
-            return $this->removeKrexxPartFromCommand(array_shift($possibleCommands));
-        }
-
-        return $varname;
+        return $this->removeKrexxPartFromCommand($commendLine);
     }
 
     /**
@@ -205,7 +188,10 @@ class CallerFinder extends AbstractCaller implements BacktraceConstInterface, Ca
             if (isset($name[1])) {
                 return $this->pool
                     ->encodingService
-                    ->encodeString($this->cleanupVarName(trim($name[1], " \t\n\r\0\x0B'\"")));
+                    ->encodeString(
+                        $this->pool->createClass(CleanUpVarName::class)
+                            ->cleanup(trim($name[1], " \t\n\r\0\x0B'\""))
+                    );
             }
         }
 
@@ -220,6 +206,12 @@ class CallerFinder extends AbstractCaller implements BacktraceConstInterface, Ca
      * in there. Hence, we need to actually count them, and try to identify any
      * string.
      *
+     * @deprecated
+     *   Since 5.0.0. Will be removed. Use the CleanUpVarName class instead.
+     *
+     * @codeCoverageIgnore
+     *   We do not test deprecated methods.
+     *
      * @param string $name
      *   The variable name, before the cleanup.
      *
@@ -228,32 +220,6 @@ class CallerFinder extends AbstractCaller implements BacktraceConstInterface, Ca
      */
     protected function cleanupVarName(string $name): string
     {
-        // We start with a -1, because we need to stop right before. every opening
-        // bracket has a closing one.
-        $level = -1;
-        $singleQuoteInactive = true;
-        $doubleQuoteInactive = true;
-
-        // Counting all real round brackets, while ignoring the ones inside strings.
-        foreach (str_split($name) as $count => $char) {
-            if ($singleQuoteInactive && $doubleQuoteInactive) {
-                if ($char === '(') {
-                    --$level;
-                } elseif ($char === ')') {
-                    ++$level;
-                }
-                if ($level === 0) {
-                    $name = substr($name, 0, $count);
-                    break;
-                }
-            }
-
-            // Reassign the booleans for the next char.
-            // Nice, huh?
-            $singleQuoteInactive = $singleQuoteInactive === !($char === '\'' && $doubleQuoteInactive);
-            $doubleQuoteInactive = $doubleQuoteInactive === !($char === '"' && $singleQuoteInactive);
-        }
-
-        return $name;
+        return $this->pool->createClass(CleanUpVarName::class)->cleanup($name);
     }
 }
