@@ -39,6 +39,7 @@
 - Change: Simplified the rendering of the plugin list.
 - Change: Moved the scalar analysis to a more appropriate
   namespace.
+- Change: Split the variable name cleanup into its own class.
 
 4.1.8
 - Added support for PHP 8.2.
